--- a/knowledge/musical_instruments/alto_sax/qna.yaml
+++ b/knowledge/musical_instruments/alto_sax/qna.yaml
@@ -1,15 +1,19 @@
-created_by: 
+created_by: kresss
 domain: musical_instrument
 seed_examples:
-- answer: | Woodwind
+- answer: Woodwind
   question: What family of musical instruments is the Alto Saxophone in? 
-- answer: | Saxophones were invented by Belgian instrument designer Adolphe Sax in the 1840s and patented in 1846.
+- answer: Saxophones were invented by Belgian instrument designer Adolphe Sax in the
+    1840s and patented in 1846.
   question: Who invented the Alto Saxophone and when?
-- answer: | Jazz
+- answer: Jazz
   question: What type of music is the Alto Saxophone associated with?
-- answer: | Companies that currently produce saxophones include Buffet Crampon, KHS/Jupiter, Conn-Selmer, Selmer Paris, Yamaha, Leblanc/Vito, Keilwerth, Cannonball, and Yanagisawa.
+- answer: Companies that currently produce saxophones include Buffet Crampon, KHS/Jupiter,
+    Conn-Selmer, Selmer Paris, Yamaha, Leblanc/Vito, Keilwerth, Cannonball, and Yanagisawa.
   question: Who manufactures Alto Saxophones?
-- answer: | The alto saxophone has a large classical solo repertoire that includes solos with orchestra, piano, and wind symphony. Two important solo compositions are Jacques Ibert's "Concertino da Camera" and Alexander Glazunov's "Concerto in E Flat major".
+- answer: The alto saxophone has a large classical solo repertoire that includes solos with
+    orchestra, piano, and wind symphony. Two important solo compositions are Jacques
+    Ibert's "Concertino da Camera" and Alexander Glazunov's "Concerto in E Flat major".
   question: What classical music is available for Alto Saxophone
 task_description: ' '
 document: 
