--- a/knowledge/science/botany/dianthus_caryophyllus/qna.yaml
+++ b/knowledge/science/botany/dianthus_caryophyllus/qna.yaml
@@ -1,4 +1,4 @@
-created_by: https://github.com/chuckmongiovi
+created_by: chuckmongiovi
 domain: flowers
 seed_examples:
 - question: "what is the common name for Dianthus Caryophyllus?"
