--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -46,6 +46,6 @@ jobs:
             NUMBER: ${{ github.event.issue.number }}
             BODY: >
               Hi! So you've been marked as `triage-uncertain`, don't fret!
-              This just means the triage team or memember needs to discuss your PR during one of our [public meetings](https://github.com/instructlab/community/blob/main/Collaboration.md#triager-standup) before making a decision. (Yes! You are more then welcome to join us.)
+              This just means the triage team or member needs to discuss your PR during one of our [public meetings](https://github.com/instructlab/community/blob/main/Collaboration.md#triager-standup) before making a decision. (Yes! You are more then welcome to join us.)
               You have either made something amazing, or maybe hit a corner case that we hadn't thought of, or something like that.
               :star2: Thank you for your contribution! And you are pushing our :dog: :computer: project and we can't thank you enough. :sparkles:
