Adding contributors. Signed-off-by Nishith Sharma <ns5014@nyu.edu>
Signed-off-by: Nishith <85579359+nishithsharma9@users.noreply.github.com>

--- a/knowledge/compliance/gdpr_complaince/qna.yaml
+++ b/knowledge/compliance/gdpr_complaince/qna.yaml
@@ -1,4 +1,4 @@
-created_by: nishithsharma9
+created_by: nishithsharma9, richlin, BalajiRamachandran
 domain: compliance
 seed_examples:
   - answer: |
