workflow: Set insight workflow run-name to the display_title
If there is a display_title from the triggering pull request, we use it.
Otherwise we use the insight workflow name. This will help in mapping
insight workflow runs to the triggering pull request.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/insight.yml
+++ b/.github/workflows/insight.yml
@@ -2,6 +2,8 @@
 
 name: CoC insight analysis
 
+run-name: ${{ github.event.workflow_run.display_title || github.workflow }}
+
 on:
   workflow_run:
     workflows:
