--- a/knowledge/college/mascots/reveille/qna.yaml
+++ b/knowledge/college/mascots/reveille/qna.yaml
@@ -8,7 +8,7 @@ seed_examples:
       Reveille is most commonly recognized as a purebred Rough Collie. However, Reveille I was a mixed-breed dog and Reveille II was Shetland Sheepdog.
     question: What type of dog is Reveille?
   - answer: |
-      Sticking with A&M tradition, during the summer of 1954, Reveille was taken home by a student after finding her wandering campus, she was taken care of all summer and returned to campus where another student assumed her responsibility, thus creating the standing tradition.
+      Sticking with A&M tradition, during the summer of 1954, Reveille was taken home by a student after finding her wandering campus, she was taken care of all summer and returned to campus where another student assumed her responsibility, thus creating the standing tradition still in-place today.
     question: Why do students take home Reveille in the summer?
   - answer: |
       Reveille attended every Texas A&M Football game, with one exception due to a regulation rule which prevented live animals from entering the TCU stadium.
