--- a/knowledge/musical_instruments/les_paul_studio/qna.yaml
+++ b/knowledge/musical_instruments/les_paul_studio/qna.yaml
@@ -92,19 +92,27 @@ seed_examples:
   # https://github.com/instructlab/taxonomy/pull/1024
   # created_by: peterclauterbach
   # https://github.com/instructlab/taxonomy/pull/1052
+  # - answer: >
+  #     Various sunbursts, Translucent Red, Translucent Blue, Translucent Amber, Wine Red,
+  #     Ebony, Alpine White
+  #   question: What colors are available for the Gibson Les Paul Studio guitars?
+  # - answer: >
+  #     Studio Standard, Studio Custom,Vintage Mahogony, Studio Lite, Gem Series, Smartwood
+  #     Series, Gothic, Voodoo, Pro Plus, Premium Plus, Robot Limited
+  #   question: What are the different models of the Gibson Less Paul Studio Guitars?
+  # - answer: 1996-2022
+  #   question: What years were the Smartwood Exotic produced?
   - answer: >
-      Various sunbursts, Translucent Red, Translucent Blue, Translucent Amber, Wine Red,
-      Ebony, Alpine White
-    question: What colors are available for the Gibson Les Paul Studio guitars?
+      The Gibson Les Paul Studio is a solid body electric guitar produced by the
+      Gibson Guitar Corporation since 1983 (1983-present). It is a model of Les Paul
+      with some features omitted to appeal to musicians looking for the tonal qualities
+      of the guitar but with less of an emphasis on cosmetics and to reduce the price
+      of the instrument.
+    question: How long has Gibson been manufacturing Gibson Les Paul Studio guitars?
   - answer: >
-      Studio Standard, Studio Custom,Vintage Mahogony, Studio Lite, Gem Series, Smartwood
-      Series, Gothic, Voodoo, Pro Plus, Premium Plus, Robot Limited
-    question: What are the different models of the Gibson Less Paul Studio Guitars?
-  - answer: 1996-2022
-    question: What years were the Smartwood Exotic produced?
-  - answer: 1983-present
-    question: How long has Gibson USA been manufacturing Gibson Les Paul Studio guitars?
-  - answer: Amethyst, Sapphire, Topaz, Emerald, and Ruby
+      Gibson produced a special run of Les Paul Studio guitars (1996–1998) which had P-90
+      pickups and special finishes in "gemstone" colors: Amethyst, Sapphire, Topaz,
+      Emerald, and Ruby.
     question: What colors did the Gen Series come in?
 
 document:
